basic front end skeleton for user profile

--- a/client/src/SocialMedia/socialprofile.css
+++ b/client/src/SocialMedia/socialprofile.css
@@ -1,3 +1,48 @@
-.test {
-    color: black;
-}
+.user-profile {
+    font-family: Arial, sans-serif;
+  }
+  
+  .header {
+    width: 100%;
+    height: 250px;
+    background-size: cover;
+    background-position: center;
+    border: 3px solid red;
+  }
+  
+  .profile-picture {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 3px solid red;
+    position: relative;
+    top: -75px;
+    left: 50px;
+  }
+  
+  .user-name {
+    margin-left: 220px;
+    margin-top: -50px;
+    font-size: 24px;
+  }
+  
+  .posts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+  
+  .post {
+    width: 80%;
+    padding: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  }
+  
+  .rating {
+    font-size: 18px;
+    color: gold;
+    margin-bottom: 5px;
+  }
+  
