--- a/client/src/pages/ProfilePage.css
+++ b/client/src/pages/ProfilePage.css
@@ -1,8 +1,8 @@
-.App {
+.ProfilePage {
   text-align: center;
 }
 
-.App-header {
+.ProfilePage-header {
   background-color: white;
   min-height: 100vh;
   display: flex;
