added avg rating to profile page frontend

--- a/client/src/pages/ProfilePage.css
+++ b/client/src/pages/ProfilePage.css
@@ -44,5 +44,9 @@
 }
 
 .number-ratings {
-  font-size: 12px; /* Adjust the font size as needed */
+  font-size: 12px;
+}
+
+.average-rating {
+  font-size: 12px;
 }
