centered profile page and added changes to navbar

--- a/client/src/Components/NavBar.css
+++ b/client/src/Components/NavBar.css
@@ -1,29 +1,54 @@
-.nav{
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #2b2929;
+    color: #ffffff;
+    padding: 10px 20px;
+    z-index: 1000; /* Ensure it stays on top of other content */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 40px 120px;
-    color: black;
-    position: fixed;
 }
 
-.nav-logo{
+.nav-logo {
     font-family: Outfit;
     font-size: 42px;
     font-weight: 500;
 }
-.nav-menu{
+
+.nav-menu {
     display: flex;
     align-items: center;
     list-style: none;
     font-size: 18px;
     gap: 90px;
-    
 }
 
-.nav-profile{
+.nav-menu li a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.nav-menu li a:hover {
+    color: #ffa500;
+    text-decoration: underline;
+}
+
+.nav-profile-wrapper {
+    padding-right: 30px;
+}
+
+.nav-profile {
     border-radius: 50px;
     padding: 10px 38px;
     background-color: #615efc;
     color: #ffffff;
+    text-decoration: none;
+}
+
+.nav-profile:hover {
+    text-decoration: underline;
+    color: #ffa500;
 }
