--- a/client/src/pages/ProfilePage.css
+++ b/client/src/pages/ProfilePage.css
@@ -1,5 +1,6 @@
 .profile-page-container {
-  padding-top: 100px;
+  padding-top: 60px;
+  padding-bottom: 400px;
 }
 
 .ProfilePage {
@@ -55,4 +56,24 @@
 
 .average-rating {
   font-size: 12px;
+}
+
+.star {
+  display: inline-block;
+  width: 1em;
+  overflow: hidden;
+  font-size: 24px;
+}
+
+.login-wrapper {
+  padding-top: 20px;
+}
+
+.login {
+  border-radius: 50px;
+  padding: 10px 38px;
+  background-color: #3f9e6a;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 20px;
 }
