added basic display of comments

--- a/client/src/Components/CommentsSection.css
+++ b/client/src/Components/CommentsSection.css
@@ -64,3 +64,8 @@ margin-bottom: 20px;
 .comments-section .login-wrapper a:hover {
     text-decoration: underline;
 }
+
+.comment-list {
+    list-style-type: none;
+    padding: 0;
+}
