--- a/client/src/Components/CommentsSection.css
+++ b/client/src/Components/CommentsSection.css
@@ -69,3 +69,12 @@ margin-bottom: 20px;
     list-style-type: none;
     padding: 0;
 }
+
+.comment {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 8px;
+    list-style-type: none;
+}
