--- a/client/src/Components/ProfileCard.css
+++ b/client/src/Components/ProfileCard.css
@@ -1,9 +1,13 @@
+:root{
+    --gray: #444444;
+}
+
 .ProfileCard{
     border-radius: 1.5rem;
     display: flex;
     flex-direction: column;
     position: relative;
-    gap: 1rem;
+    gap: 0.05rem;
     overflow-x: clip;
     background: var(--cardColor);
 }
@@ -18,6 +22,8 @@
 
 .ProfileImages>img:nth-of-type(1){
     width: 100%;
+    max-height: 20rem;
+    object-fit: cover;
 }
 
 .ProfileImages>img:nth-of-type(2){
@@ -81,4 +87,11 @@
 .vert{
     height: 150%;
     border-left: 2px solid var(--hrColor);
+}
+
+.ProfileCard>span{
+    font-weight: bold;
+    color: var(--gray);
+    align-self: center;
+    margin-bottom: 0.5rem;
 }
