--- a/client/src/pages/UserProfile.css
+++ b/client/src/pages/UserProfile.css
@@ -3,6 +3,6 @@
     display: grid;
     margin: auto;
     width: 50%;
-    border: 3px solid green;
+    border: 3px solid var(--gray);
     padding: 10px;
 }
