--- a/client/src/Components/Post.css
+++ b/client/src/Components/Post.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    background-color: rgb(200, 247, 255);
+    background-color: whitesmoke;
     border-radius: 1rem;
     gap: 1rem;
 }
