--- a/client/src/pages/UserProfile.css
+++ b/client/src/pages/UserProfile.css
@@ -1,8 +1,23 @@
+:root{
+    --gray: #444444;
+}
+
+.Profile{
+    position: relative;
+    display: grid;
+    grid-template-columns: 25% 50% 25%;
+}
+
 .User{
     position: relative;
     display: grid;
     margin: auto;
-    width: 50%;
+    width: auto;
     border: 3px solid var(--gray);
-    padding: 10px;
+    padding: 0%;
+}
+
+.Followers{
+    margin-top: 10rem;
+    padding: 3rem;
 }
