--- a/client/src/Components/Post.css
+++ b/client/src/Components/Post.css
@@ -8,8 +8,8 @@
 }
 
 .Post>img{
-    width: 100%;
-    max-height: 20rem;
+    max-width: 20rem;
+    max-height: 10rem;
     object-fit: cover;
     border-radius: 0.5rem;
 }
