--- a/client/src/Components/UserPosts.css
+++ b/client/src/Components/UserPosts.css
@@ -1,5 +1,5 @@
 .UserPosts{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(333px, 1fr));;
+    grid-gap: 20px;
 }
