--- a/client/src/pages/ExplorePage.css
+++ b/client/src/pages/ExplorePage.css
@@ -1,35 +1,58 @@
 /* ExplorePage.css */
 
 .explore-page {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-  }
-  
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 300px;
-    border-radius: 5px;
-    overflow: hidden;
-  }
-  
-  .card img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .container {
-    padding: 16px;
-  }
-  
-  .container h4 {
-    font-size: 20px;
-    margin: 0;
-  }
-  
-  .container p {
-    font-size: 16px;
-    color: gray;
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding-top: 60px; /* Adjust the top padding to match the navbar height */
+}
+
+.title-box {
+  background-color: #615efc; /* Purple background */
+  color: #ffffff; /* White text */
+  padding: 10px 20px;
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+
+.title-box h1 {
+  margin: 0;
+  font-size: 24px;
+}
+
+.explore-page {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding-top: 60px; /* Adjust the top padding to match the navbar height */
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 300px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+}
+
+.container {
+  width: 100%; /* Ensure the container matches the width of the card */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  padding: 16px;
+}
+
+.container h4 {
+  font-size: 20px;
+  margin: 0;
+}
+
+.container p {
+  font-size: 16px;
+  color: gray;
+}
+
