--- a/client/src/pages/ExplorePage.css
+++ b/client/src/pages/ExplorePage.css
@@ -7,18 +7,6 @@
   padding-top: 60px; /* Adjust the top padding to match the navbar height */
 }
 
-.title-box {
-  background-color: #615efc; /* Purple background */
-  color: #ffffff; /* White text */
-  padding: 10px 20px;
-  border-radius: 20px;
-  margin-bottom: 20px;
-}
-
-.title-box h1 {
-  margin: 0;
-  font-size: 24px;
-}
 
 .explore-page {
   display: flex;
@@ -56,3 +44,8 @@
   color: gray;
 }
 
+.link-text {
+  font-size: 30px;
+  color: gray;
+  text-decoration: none;
+}
