--- a/client/src/pages/ExplorePage.css
+++ b/client/src/pages/ExplorePage.css
@@ -4,16 +4,11 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  padding-top: 60px; /* Adjust the top padding to match the navbar height */
+  margin-top: 10rem; /* Adjust the top padding to match the navbar height */
+  margin-left: 5rem;
+  margin-bottom: 5rem;
 }
 
-
-.explore-page {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  padding-top: 60px; /* Adjust the top padding to match the navbar height */
-}
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
