fixed dining halls page, small formatting issues

--- a/client/src/pages/DiningHallsPage.css
+++ b/client/src/pages/DiningHallsPage.css
@@ -4,6 +4,7 @@
 
 .wrapper {
   display: flex;
+  margin-top: 5rem;
   justify-content: center; /* Center horizontally */
   align-items: flex-start; /* Align items to the top */
   width: 100vw; /* Full viewport width */
