--- a/client/src/Components/NavBar.css
+++ b/client/src/Components/NavBar.css
@@ -3,8 +3,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #2b2929;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #333333;
     padding: 10px 20px;
     z-index: 1000; /* Ensure it stays on top of other content */
     display: flex;
@@ -16,6 +16,7 @@
     font-family: Outfit;
     font-size: 42px;
     font-weight: 500;
+    color: #6C33A3; /* Change Culinary Critique color to purple */
 }
 
 .nav-menu {
@@ -28,12 +29,12 @@
 }
 
 .nav-menu li a {
-    color: #ffffff;
+    color: #333333;
     text-decoration: none;
 }
 
 .nav-menu li a:hover {
-    color: #ffa500;
+    color: #6C33A3; /* Change hover color to purple */
     text-decoration: underline;
 }
 
@@ -59,13 +60,29 @@
 }
 
 .nav-search {
-    padding: 5px;
+    padding: 10px;
+    border-radius: 50px; /* Makes the search bar circular */
+    border: 1px solid #ddd;
+    outline: none;
+    width: 200px;
+    transition: width 0.4s ease-in-out;
+    box-shadow: none; /* Removes the box shadow */
+    background-color: #ffffff; /* Ensure background is white */
+}
+
+.nav-search:focus {
+    width: 300px; /* Expands the width on focus */
+    box-shadow: none; /* Ensures no shadow on focus */
+    background-color: #ffffff; /* Ensure background is white */
 }
 
 .nav-search-results {
     position: absolute;
-    top: 30px;
+    top: 40px; /* Adjust the top position to align with the search bar */
     background: white;
     color: black;
     z-index: 999;
+    width: 100%; /* Ensure it matches the width of the search bar */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow for better visibility */
+    border-radius: 8px; /* Optional: Add border radius for rounded corners */
 }
