--- a/client/src/pages/ProfilePage.css
+++ b/client/src/pages/ProfilePage.css
@@ -196,3 +196,13 @@
 .toggle-button:hover {
   background-color: #0056b3;
 }
+
+.profile-image {
+    width: 300px;
+    height: auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 300px;
+  border-radius: 15px;
+  overflow: hidden;
+}
