--- a/client/src/Components/NavBar.css
+++ b/client/src/Components/NavBar.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 3px solid #000000;
 }
 
 .nav-logo {
