--- a/client/src/Components/ProfileCard.css
+++ b/client/src/Components/ProfileCard.css
@@ -7,7 +7,7 @@
     position: relative;
     gap: 0.05rem;
     overflow-x: clip;
-    background: white;
+    background: whitesmoke;
 }
 
 
@@ -44,71 +44,4 @@
 .ProfileName>span:nth-of-type(1){
     font-weight: bold;
     font-size: 24px;
-}
-
-.followStatus{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 0.75rem;
-}
-
-.followStatus > hr {
-    width: 85%;
-    border: 1px solid var(--hrColor);
-}
-
-.followStatus > div {
-    display: flex;
-    gap: 1rem;
-    width: 80%;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.followers {
-    display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
-    align-items: center;
-    justify-content: center;
-}
-
-.following {
-    display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
-    align-items: center;
-    justify-content: center;
-}
-
-.followers > span:nth-of-type(1) {
-    font-weight: bold;
-}
-
-.followers > span:nth-of-type(2) {
-    color: black;
-    font-size: 13px;
-}
-
-.following > span:nth-of-type(1) {
-    font-weight: bold;
-}
-
-.following > span:nth-of-type(2) {
-    color: black;
-    font-size: 13px;
-}
-
-.vert{
-    height: 150%;
-    border-left: 2px solid var(--hrColor);
-}
-
-.ProfileCard>span{
-    font-weight: bold;
-    color: var(--gray);
-    align-self: center;
-    margin-bottom: 0.5rem;
 }
