--- a/client/src/Components/UserPosts.css
+++ b/client/src/Components/UserPosts.css
@@ -1,4 +1,5 @@
 .UserPosts{
+    margin-top: 1rem;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(333px, 1fr));;
     grid-gap: 20px;
